Word wrap fix on popovers

--- a/less/components/popover.less
+++ b/less/components/popover.less
@@ -33,7 +33,7 @@
 	text-decoration: none;
   text-align: left;
   white-space: normal;
-  word-break: break-all;
+  word-wrap: break-word;
 	
 	pointer-events: none;
 	
